feat: CRUD note

--- a/Demo/Modul2_Prak/Task1/style.css
+++ b/Demo/Modul2_Prak/Task1/style.css
@@ -1,53 +1,117 @@
-* {
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+body {
+  height: 100%;
+  width: 100%;
   margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  box-sizing: border-box;
+  background-color: #d3e9ff;
+  font-family: Poppins;
 }
 
-.container {
-  width: 100%;
+section {
   height: 100vh;
-  background-color: #e3f9ff;
+  width: 100%;
   display: flex;
   align-items: center;
+}
+
+.main-row {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+.text1 {
+  display: flex;
+  color: #000;
+  text-align: center;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 4px;
+}
+
+.text2 {
+  display: flex;
+  color: #24313d;
+  text-align: center;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 6.4px;
+}
+
+.calculator-row {
+  display: flex;
+  height: 100%;
+}
+
+.calculator-col {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.calculator-body {
+  padding: 13px;
+  width: 370px;
+  height: auto;
+  border-radius: 6px;
+  background: #384450;
+}
+
+.cal-button {
+  display: flex;
   justify-content: center;
+  align-items: center;
+  min-width: 60px;
+  max-height: 60px;
+  padding: 16.25px;
+  border-radius: 18px;
+  background: #384450;
+  filter: drop-shadow(-8px -4px 26px #454f5b);
+  margin-left: 16px;
+  margin-right: 16px;
 }
 
-.calculator {
-  background-color: #3a4452;
-  padding: 20px;
-  border-radius: 10px;
+.blue {
+  color: #57c6b7;
 }
 
-.calculator form input {
-  border: 0;
-  outline: 0;
-  width: 60px;
-  height: 60px;
-  border-radius: 10px;
-  box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1),
-    5px 5px 15px rgba(0, 0, 0, 0.2);
-  background-color: transparent;
-  font-size: 20px;
-  color: #fff;
-  cursor: pointer;
-  margin: 10px;
+.white {
+  color: #ffffff;
 }
 
-form .display {
+.text {
+  text-align: center;
+  margin: 15px;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.text-result {
+  max-height: 90px;
+  margin-top: 64px;
   display: flex;
   justify-content: flex-end;
-  margin: 20px 0;
+  color: #ffffff;
+  text-align: end;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  background-color: #384450;
+  border: none;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
-form .display input {
-  text-align: right;
-  flex: 1;
-  font-size: 45px;
-  box-shadow: none;
-}
-
-form input.equals {
-  width: 145px;
+.result {
+  max-width: 100%;
 }
